--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,9 +1,29 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: My App
-            description: This is an awesome app!
+            title: Home management API
+            description: An app to manage your daily
             version: 1.0.0
+        definitions:
+            ContactRequestInput:
+                type: object
+                properties:
+                    firstname:
+                        type: string
+                        required: true
+                    lastname:
+                        type: string
+                        required: true
+                    email:
+                        type: string
+                        required: true
+                    subject:
+                        type: string
+                        required: true
+                    message:
+                        type: string
+                        required: true
     areas: # to filter documented areas
         path_patterns:
             - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+
