--- a/composer.json
+++ b/composer.json
@@ -62,11 +62,14 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
-            "require": "4.2.*"
+            "allow-contrib": false
         }
     },
     "require-dev": {
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/symfony2-extension": "^2.1",
+        "behatch/contexts": "^3.2",
+        "squizlabs/php_codesniffer": "^3.4",
         "symfony/profiler-pack": "^1.0"
     }
 }
