--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         "behat/mink-browserkit-driver": "^1.3",
         "behat/symfony2-extension": "^2.1",
         "behatch/contexts": "^3.2",
+        "phpstan/phpstan-symfony": "^0.11.1",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/profiler-pack": "^1.0"
     }
