--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,7 @@
         "behat/symfony2-extension": "^2.1",
         "behatch/contexts": "^3.2",
         "phpstan/phpstan-symfony": "^0.11.1",
+        "sensiolabs-de/deptrac-shim": "^0.4.0",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/profiler-pack": "^1.0"
     }
