--- a/.env
+++ b/.env
@@ -38,3 +38,9 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 DATABASE_URL_TEST=sqlite:///%kernel.project_dir%/var/data.db
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=passphrase
+###< lexik/jwt-authentication-bundle ###
