--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -2,3 +2,6 @@ controllers:
     resource: ../../src/Actions/
     type: annotation
     prefix: /api
+
+api_login_check:
+    path: /api/login_check
