--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,5 +24,12 @@ services:
         resource: '../src/Actions'
         tags: ['controller.service_arguments']
 
+    App\Domain\AuthenticationJWT\Listeners\AuthenticationFailureEventListener:
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_failure, method: 'onAuthenticationFailureResponse'}
+
+    App\Domain\AuthenticationJWT\Listeners\AuthenticationSuccessEventListener:
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: 'onAuthenticationSuccessResponse'}
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
