--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,4 +42,5 @@ security:
         - { path: ^/api/doc, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/logout, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/registration, roles: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
